<resources>
    <string name="app_name">Foodiest</string>
    <string name="lable_nav_home">Home</string>
    <string name="lable_nav_location">Location</string>
    <string name="lable_nav_favorite">Favorite</string>
    <string name="lable_nav_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lable_store">Sydney CBD</string>
    <string name="lable_hint">Search for restaurant...</string>
    <string name="lable_popular">Most Popular</string>
    <string name="lable_see_all">See all</string>
    <string name="lable_name">Name</string>
    <string name="lable_address">Address</string>
    <string name="lable_kind">Kind</string>
    <string name="lable_meals_deal">Meals Deal</string>
    <string name="lable_description">Description</string>
    <string name="lable_title_popular">Popular</string>
    <string name="lable_category_cake">Cake</string>
    <string name="lable_category_india_cussion">India Cussion</string>
    <string name="lable_category_asian_cussion">Asian Cussion</string>
    <string name="lable_category_chinese_cussion">Chinese Foods</string>
    <string name="lable_category_vegan">Vegetarian</string>
    <string name="lable_rating">Rating</string>
    <string name="lable_price">Price</string>
    <string name="lable_order">Order Now</string>
    <string name="lable_visit">Visit Us</string>
    <string name="lable_meals_seafood">Seafood</string>

    <string-array name="data_name">
        <item>Samgyetang</item>
        <item>Kimchi Sop</item>
        <item>Gudeg</item>
        <item>Pempek</item>
        <item>Sate Maranggi</item>
        <item>Bakso</item>
        <item>Ramen</item>
        <item>Nasi Goreng</item>
    </string-array>

    <string-array name="data_price">
        <item>Rp 500.000,-</item>
        <item>Rp 80.000,-</item>
        <item>Rp 20.000,-</item>
        <item>Rp 10.000,-</item>
        <item>Rp 150.000,-</item>
        <item>Rp 15.000,-</item>
        <item>Rp 5.000,-</item>
        <item>Rp 12.000,-</item>
    </string-array>
    <string-array name="title">
        <item>Bakmi Gading Permai</item>
        <item>Talaga Sampireun  Ancol</item>
        <item>HOLYWINGS GROUND</item>
    </string-array>
    <string-array name="lat">
        <item>-6.1501371</item>
        <item>-6.2041305</item>
        <item>-6.1782203</item>
    </string-array>
    <string-array name="lng">
        <item>106.9074604</item>
        <item>106.7108577</item>
        <item>106.7782255</item>
    </string-array>


    <string-array name="data_desc">
        <item>Samgyetang adalah sup berisi ayam muda dalam keadaan utuh yang direbus dengan api kecil selama 2–3 jam hingga empuk.</item>
        <item>Menu yang satu ini memiliki rasa yang unik. Pedas, asam dan sangat menggugah selera. Di Korea Selatan, menu ini sangat populer. Sayur sawi putih yang diasinkan kemudian dicampur dengan bumbu dan saus khas Korea.</item>
        <item>Gudeg adalah makanan khas Yogyakarta dan Jawa Tengah yang terbuat dari nangka muda yang dimasak dengan santan. Perlu waktu berjam-jam untuk membuat masakan ini. Warna coklat biasanya dihasilkan oleh daun jati yang dimasak bersamaan.</item>
        <item>Pempek atau empek-empek adalah makanan khas Palembang yang terbuat dari daging ikan yang digiling lembut dan tepung kanji (secara salah kaprah sering disebut sebagai "tepung sagu"), serta beberapa komposisi lain seperti telur, bawang putih yang dihaluskan, penyedap rasa dan garam.</item>
        <item>Sate maranggi adalah makanan asli Indonesia yang biasa ditemukan di daerah Jawa Barat, khususnya Purwakarta. Sate maranggi merupakan makanan khas Sunda.</item>
        <item>Bakso umumnya dibuat dari campuran daging sapi giling dan tepung tapioka, akan tetapi ada juga bakso yang terbuat dari daging ayam, ikan, atau udang bahkan daging kerbau. Dalam penyajiannya, bakso umumnya disajikan panas-panas dengan kuah kaldu sapi bening, dicampur mi, bihun, taoge, tahu, terkadang telur dan ditaburi bawang goreng dan seledri.</item>
        <item>Ramen adalah masakan mi kuah Jepang yang berasal dari China. Orang Jepang juga menyebut ramen sebagai chuka soba atau shina soba karena soba atau o-soba dalam bahasa Jepang sering juga berarti mi.</item>
        <item>Nasi goreng adalah sebuah makanan berupa nasi yang digoreng dan diaduk dalam minyak goreng atau margarin, biasanya ditambah kecap manis, bawang merah, bawang putih, asam jawa, lada dan bumbu-bumbu lainnya, seperti telur, ayam, dan kerupuk.</item>
    </string-array>

    <string-array name="data_address">
        <item>Hanamdong Restaurant</item>
        <item>Ilsan Kimchi Restaurant</item>
        <item>Malioboro Street Food</item>
        <item>Palembang SC Restaurant</item>
        <item>Kuta Marriot Restaurant</item>
        <item>Bakso Bodjangan Restaurant</item>
        <item>Gokana Ramen and Teppan</item>
        <item>Solaria</item>
    </string-array>

    <string-array name="data_kind">
        <item>Main Course</item>
        <item>Main Course</item>
        <item>Main Course</item>
        <item>Appetizer</item>
        <item>Main Course</item>
        <item>Main Course</item>
        <item>Main Course</item>
        <item>Main Course</item>
    </string-array>
    <array name="data_photo">
        <item>@drawable/pop_image_1</item>
        <item>@drawable/pop_image_2</item>
        <item>@drawable/pop_image_3</item>
        <item>@drawable/pop_image_4</item>
        <item>@drawable/pop_image_5</item>
        <item>@drawable/pop_image_6</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>

    </array>
</resources>
