<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_16dp"
    android:layout_marginEnd="@dimen/_16dp"
    tools:context=".activity.AllPopulerActivity">

    <TextView
        android:id="@+id/tv_title_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/lable_title_popular"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_24dp"
        android:src="@drawable/ic_home" />

    <HorizontalScrollView
        android:id="@+id/hs_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_popular"
        android:layout_marginTop="@dimen/_20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_category_cake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_cake"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/tv_category_india_cussion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_india_cussion"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/tv_category_asian_cussion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_asian_cussion"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/tv_category_chinese_cussion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_chinese_cussion"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/tv_category_vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_vegan"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>


    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hs_category"
        android:layout_marginTop="@dimen/_16dp" />

</RelativeLayout>