<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_16dp"
    android:layout_marginBottom="@dimen/_16dp"
    app:cardCornerRadius="@dimen/_24dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@drawable/top_background">
            <ImageView
                android:id="@+id/iv_popular"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_150dp"
                android:scaleType="fitXY"
                android:src="@drawable/image_1" />
        </FrameLayout>


        <TextView
            android:id="@+id/tv_name_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:text="@string/lable_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:text="@string/lable_address"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/tv_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:text="@string/lable_kind" />


    </LinearLayout>

</androidx.cardview.widget.CardView>