<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailPopularFoodActivity">

    <LinearLayout
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_300dp"
        android:layout_margin="@dimen/_16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_image_detail_popular"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_100dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/pop_image_6" />

        <FrameLayout
            android:id="@+id/fm_detail_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name_detail_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:gravity="center"
                    android:text="@string/lable_name"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/rt_bar_detail_popular"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_marginEnd="16dp"
                    android:numStars="5"
                    android:rating="3" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_kind_detail_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lable_kind"
            android:textSize="@dimen/_12sp" />

        <TextView
            android:id="@+id/tv_desc_detail_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/lable_description"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

</LinearLayout>